--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
   "name": "app",
   "private": "true",
   "dependencies": {
+    "autoprefixer": "^10.4.14",
     "esbuild": "^0.17.11",
+    "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "scripts": {
-    "build": "esbuild app/javascript/application.js --bundle --sourcemap --outdir=app/assets/builds --public-path=assets"
+    "build": "esbuild app/javascript/application.js --bundle --sourcemap --outdir=app/assets/builds --public-path=assets",
+    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css --minify"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.2.7"
   }
 }
