--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "postcss": "^8.4.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-internet-meter": "^1.1.1",
     "react-router-dom": "^6.10.0",
     "tailwindcss": "^3.3.1"
   },
